Configure module reads for Java tasks and javadoc